--- a/app/pages/lunch-group/_lunch-group.scss
+++ b/app/pages/lunch-group/_lunch-group.scss
@@ -36,4 +36,31 @@
     display: block;
     overflow: hidden;
   }
+
+  .hamburger{
+    display: none;
+
+  }
+}
+
+@media only screen and (max-width:900px){
+  .lunch-group-container{
+    .hamburger{
+      display: inline-block;
+      width: 30px;
+      height: 40px;
+      float: left;
+      margin: 30px 0;
+      text-align: center;
+      position: relative;
+      left: -15px;
+      .material-icons{
+        line-height: 40px;
+      }
+    }
+    .group-info{
+      width: calc(100% - 30px);
+      float: left;
+    }
+  }
 }
