--- a/app/layout/layout.html
+++ b/app/layout/layout.html
@@ -6,23 +6,23 @@
     <nav class="groups">
       <ul class="groups-items">
         <li class="groups-item active" (click)="select_group()">
-            <span class="group-avatar"><img class="group-img" src="/app/images/work.jpg" alt="" /></span>
+            <span class="group-avatar"><img class="group-img" src="/images/work.jpg" alt="" /></span>
             <span class="group-name">Work Lunch</span>
         </li>
         <li class="groups-item">
-            <span class="group-avatar"><img class="group-img" src="/app/images/gym.jpg" alt="" /></span>
+            <span class="group-avatar"><img class="group-img" src="/images/gym.jpg" alt="" /></span>
             <span class="group-name">Gym Lunch</span>
         </li>
         <li class="groups-item">
-            <span class="group-avatar"><img class="group-img" src="/app/images/family.jpg" alt="" /></span>
+            <span class="group-avatar"><img class="group-img" src="/images/family.jpg" alt="" /></span>
             <span class="group-name">Family Dinner</span>
         </li>
         <li class="groups-item">
-            <span class="group-avatar"><img class="group-img" src="/app/images/bball.jpg" alt="" /></span>
+            <span class="group-avatar"><img class="group-img" src="/images/bball.jpg" alt="" /></span>
             <span class="group-name">League Team</span>
         </li>
         <li class="groups-item">
-            <span class="group-avatar"><img class="group-img" src="/app/images/date.jpg" alt="" /></span>
+            <span class="group-avatar"><img class="group-img" src="/images/date.jpg" alt="" /></span>
             <span class="group-name">Date Night</span>
         </li>
       </ul>
